# predictif

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  test_batch_prediction.py  test_local_trainer.py  test_metadata.json  test_model.pkl  test_multi_models.py  test_training.py
autotrain/: mcp_tools.py  models.py  trainer.py
docs/: tools_resources.md
mltools/: __init__.py  local_trainer.py  mcp_tools.py
models/46c2801e-4542-4d0c-b67a-af33b20bcc23/: metadata.json  model.pkl
models/4c18e71e-710a-433e-b3f3-95b9d1834f4b/: classification_report.json  metadata.json  model.pkl
models/58d0931d-08cf-4f9f-bc5d-21105a57f5ab/: metadata.json
models/62ff97ae-3d24-46df-99c5-ef7d9fcfd093/: classification_report.json  metadata.json
models/9cceb125-26a6-413a-90f3-ddfc22bdb599/: metadata.json
models/b028301e-b2ba-4638-98ea-aa8f116efa52/: model.pkl
models/d75b8c23-9d81-457d-9996-af41b9b60542/: metadata.json
predictif/: __init__.py  data_manager.py  files.py  files_tools.py  main.py  ml.py  ml_tools.py  tools.py
predictif/resources/: __init__.py  example_resources.py
predictif/tools/: __init__.py
predictif/utils/: logging.py
src/predictif/: __init__.py  main.py
src/predictif.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/predictif/tools/: example_tools.py
tests/: test_main.py
