[project]
name = "predictif"
version = "0.1.0"
description = "Prédictif is a MCP Server helping choose, train and exploit a model on your data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.12.3",
    "pandas>=2.3.2",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "mistralai>=1.0.0",
    "requests",
    "huggingface-hub",
    "tabulate",
]
